[package]
name = "global_value_manager"
description = "A global value manager"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ayyEve/rust_global_value_manager"
repository = "https://github.com/ayyEve/rust_global_value_manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "*"


parking_lot = "*"
crossbeam = "*"